--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240926T063046Z
+"   /golfscore                                      20240926T064609Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/22599.html">Approximate a Bell Curve                        : 0022599</a>
 <a href="q/275779.html">Alien Weekends!                                 : 0275779</a>
 <a href="q/275689.html">Tic-tac-toe encode them all                     : 0275689</a>
 <a href="q/275739.html">Print 4 billion if statements                   : 0275739</a>
