--- a/q/275689.html
+++ b/q/275689.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>163</td><td>C clang</td><td>240924T152052Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275752#275752">jdt</a></td></tr>
-<tr d-ix="1"><td>166</td><td>Python 3.8 prerelease</td><td>240923T000833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275699#275699">David Ch</a></td></tr>
-<tr d-ix="2"><td>177</td><td>Haskell</td><td>240924T204832Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275760#275760">Antonio </a></td></tr>
-<tr d-ix="3"><td>121</td><td>Python 3</td><td>240924T030039Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275732#275732">tsh</a></td></tr>
+<tr d-ix="0"><td>121</td><td>Python 3</td><td>240924T030039Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275732#275732">tsh</a></td></tr>
+<tr d-ix="1"><td>163</td><td>C clang</td><td>240924T152052Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275752#275752">jdt</a></td></tr>
+<tr d-ix="2"><td>166</td><td>Python 3.8 prerelease</td><td>240923T000833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275699#275699">David Ch</a></td></tr>
+<tr d-ix="3"><td>177</td><td>Haskell</td><td>240924T204832Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275760#275760">Antonio </a></td></tr>
 <tr d-ix="4"><td>022</td><td>K ngn/k</td><td>240922T202605Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275695#275695">ovs</a></td></tr>
 <tr d-ix="5"><td>097</td><td>Perl 5 n</td><td>240922T191737Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275692#275692">Kjetil S</a></td></tr>
 <tr d-ix="6"><td>100</td><td>JavaScript Node.js</td><td>240923T081611Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275711#275711">tsh</a></td></tr>
@@ -39,7 +39,21 @@
 <tr d-ix="10"><td>017</td><td>Vyxal</td><td>240923T072643Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275707#275707">emanresu</a></td></tr>
 <tr d-ix="11"><td>032</td><td>Charcoal</td><td>240922T213047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275696#275696">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 163 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 121 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda s:bin(g('').index(s)+8888)[3:];g=lambda p,c=0:[p]*(c%8&lt;2)if p[8:]else sum([g(p+' xo'[n%5],c+n)for n in[0,7,1]],[])
+</code></pre>
+<p><a href="https://tio.run/##ZY/RbsMgDEXf@xV@mcAti9pV07qsfAlDVUpIykQABSJlX5@RdEonjRfjK9v3nvCdbt4dp4Z/TrbqrnUFsbwaR1tKCBbG1XqkEXen/FAcS/nR8t@5wBTflyLILVVPp/MLmgaCOJVS26ghDh0VLQ07AqMnwj29SqZ2DhvfgwPjxJ69sYOUTEicQm9cog0lIwD4cQRPEDemC75PYJLuk/c2MlDeWq2S8S43zeDUom9avv4L2w8XVambpkhb3FTWXowLQwIOgpDiy2c2s6QwOcXjeBF6Xw8q0a1YEsvt@wxkCuWHnI2MBJ/XJsdbCHL@xcEP6W5hTUy0qwJtGKzWGeUOaLWjUSf6WEFkMKv/Z7OyzBvk/HCEytUwrxo887mS/YEgrBh/L04/" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>Python port to my JS solution.</p>
+<hr />
+<h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 115 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda s:bin([str(i).translate([32,120,111]*88)for i in rang(10**9)if{*str(i)}&lt;={*&quot;189&quot;}!=i%9&lt;2].index(s)*7)[-13:]
+</code></pre>
+<p><a href="https://tio.run/##tZNNj9owEIbv@RXTlarY2YBiOBQQOVTqx62HilsarbKJw7oyduQ4Ular/e10bKtACdr2Ui7Yw7zzPjNjumf7pNXy2PAWWjF@Enthe6KGw0PjjykIVdNNBCBaOIchzyFzUYBnwWUDGZ657HmItdpAg0ogBUthlcK6dHos5ZOgWPsoK2nIDwrjFLcgYAbsDBI@wbaBBFgGSQJX6RTuwUSRa0vyvt89Vert3vB4ZheOxFRqzwkaX1S@x8pvIIsUdmbgE0wzmc6FwyVQlsLsbw5fKqx0w8I3@/3jt6@fSVKZff@7M8kV8Xe3tCVUqgF3LRalC8xYqNTbytgUuGpSPPMOcp91AlaO42qUrnJvDfFaSq/R0BvLwRa12zwYXFOrG4gTIETBuST/jOMk7gnQq224F4w0@PMUI2rzH0dZHR6bCvrNo1CkcKUEnVvcUi8ry0mxXKRskaWMsTJZrehpj2HoLEuSNRXtSxKUr9v8Jbljq/Xd67tcvF9vF@VcqIaPpKfJB1rM2HJTHjsjlCUtiUek0eMIOqY0isSh08aCsNxYrSU@jVpLyWsrtMJLO6jax6Nd/j9AcRx/DGM3JY8qKR@E6gaL@ynieP5TY6I4m53Y553RzVBbkhQxjDouvTuIea0H7D0eYzo7XbB9oQpkL4ODHmywkKK35FB1pE3hZI2jCgP0u@eWnCVu/f5dTXIx4vMFzXMW/hBOKug2d99xxmJ6/pNeVjz@Ag" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p>A very slow solution. The <code>range</code> is replaced by a customized implementation in tio link to speed it up. It loops every (decimal) number less than 10<sup>9</sup>, and only keeps numbers that is only composed with digits 1, 8, 9 and mod 9 less than 2. Then replace 1, 8, 9 by <code>x</code>, <code>o</code>, <code> </code>. And all these strings are considered valid and assign an encoding to it from 0 to 9348. Then multiply the encoding by 7 and mod by 2<sup>13</sup>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 163 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>i,j,x,o,c,p,d,b[9];f(*a){for(c=i=0;i&lt;2e4;c+=x==o|x==o+1){for(p=9,x=o=0,j=i++;p--;j/=3)b[p]=&quot;x o&quot;[d=j%3],x+=!d,o+=d&gt;1;for(p=!bcmp(a,b,36)*13;p--;c/=2)a[p]=48+c%2;}}
 </code></pre>
@@ -78,7 +92,7 @@
 }
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s>177</s> <s>173</s> 166 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s>177</s> <s>173</s> 166 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:f&quot;{(t:=bin((L:=[f'{t:&lt;9}'for i in range(3**9)if(t:=g(i)[:-1]).count('x')-t.count('o')in(0,1)]).index(s))[2:]):0&gt;13}&quot;
 g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
@@ -98,7 +112,7 @@ g=lambda x:'1'*(x&lt;1)or' xo'[x%3]+g(x//3)
     return '0'*(13-len(t1))+t1
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 177 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 177 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>e s t=take t.g.d where d a=divMod a$l s;g(a,b)=s!!b:g(d a)
 f=filter
@@ -119,13 +133,6 @@ a s=e&quot;01&quot;13.l.f(\u-&gt;o((o(\c-&gt;l.f(==c)$u)(-)'x''o')==)(||)1 0&amp
 <p><code>e&quot;01&quot;13.</code></p>
 </li>
 </ol>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 121 bytes</h1>
-
-<pre class="lang-python prettyprint-override"><code>lambda s:bin(g('').index(s)+8888)[3:];g=lambda p,c=0:[p]*(c%8&lt;2)if p[8:]else sum([g(p+' xo'[n%5],c+n)for n in[0,7,1]],[])
-</code></pre>
-<p><a href="https://tio.run/##ZY/RbsMgDEXf@xV@mcAti9pV07qsfAlDVUpIykQABSJlX5@RdEonjRfjK9v3nvCdbt4dp4Z/TrbqrnUFsbwaR1tKCBbG1XqkEXen/FAcS/nR8t@5wBTflyLILVVPp/MLmgaCOJVS26ghDh0VLQ07AqMnwj29SqZ2DhvfgwPjxJ69sYOUTEicQm9cog0lIwD4cQRPEDemC75PYJLuk/c2MlDeWq2S8S43zeDUom9avv4L2w8XVambpkhb3FTWXowLQwIOgpDiy2c2s6QwOcXjeBF6Xw8q0a1YEsvt@wxkCuWHnI2MBJ/XJsdbCHL@xcEP6W5hTUy0qwJtGKzWGeUOaLWjUSf6WEFkMKv/Z7OyzBvk/HCEytUwrxo887mS/YEgrBh/L04/" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
-<p>Python port to my JS solution.</p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 22 bytes</h1>
 <p>As suggested by emanresu A, a port of <a href="https://codegolf.stackexchange.com/a/275707/64121">their Vyxal answer</a> ends up a lot shorter:</p>
