--- a/q/275779.html
+++ b/q/275779.html
@@ -35,8 +35,8 @@
 <div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 14 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ZLãʒO%yн@εNQ}ß
 </code></pre>
-<p>Input as a pair of lists, outputs as a list pair.<br />
-Outputs all valid pairs within the range <span class="math-container">\$(1,1)\leq(n,m)\leq(\max(d\mathbin\Vert e),\max(d\mathbin\Vert e)\$</span>. If there are possible test cases for which the output would be outside this range, I can fix it.</p>
+<p>Input as a pair of lists <span class="math-container">\$[d,e]\$</span>.<br />
+Outputs all valid <span class="math-container">\$[m,n]\$</span>-pairs within the range <span class="math-container">\$(1,1)\leq(m,n)\leq(\max(d\mathbin\Vert e),\max(d\mathbin\Vert e)\$</span>. If there are possible test cases for which the output would be outside this range, I can fix it.</p>
 <p><a href="https://tio.run/##yy9OTMpM/f8/yufw4lOT/FUrL@x1OLfVL7D28Pz//6OjDXSMdUx0LHQMDWN1ok11zHQMjWJjAQ" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfeWhlf@jfA4vPjXp0Lpif9XKC3sdzm31C6w9PP9/rc7/6OhoAx1jHRMdCx1Dw1idaFMdMx1Do9hYHQWQhJGOGVDMXMcSImCsY2iiA1FlqWNkBhEEajTTMTIBihrrgFXGAgA" rel="nofollow noreferrer">verify all test cases</a>.</p>
 <p><strong>Explanation:</strong></p>
 
