--- a/q/275739.html
+++ b/q/275739.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>110</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
-<tr d-ix="1"><td>042</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
-<tr d-ix="2"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
-<tr d-ix="3"><td>093</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
+<tr d-ix="0"><td>093</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
+<tr d-ix="1"><td>110</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
+<tr d-ix="2"><td>042</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
+<tr d-ix="3"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
 <tr d-ix="4"><td>136</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
 <tr d-ix="5"><td>022</td><td>MathGolf</td><td>240925T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275772#275772">Kevin Cr</a></td></tr>
 <tr d-ix="6"><td>143</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
@@ -45,7 +45,15 @@
 <tr d-ix="16"><td>057</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
 <tr d-ix="17"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, <s> 111 </s> 110 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 93 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>f(i){puts(&quot;g(x){&quot;);for(i=0;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i--%2?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
+</code></pre>
+<p>Outputs &quot;segments&quot; in reverse order.</p>
+<p>-11 thanks to <a href="https://codegolf.stackexchange.com/users/11259/digital-trauma">Digital Trauma</a> and <a href="https://codegolf.stackexchange.com/users/119678/squarefinder">SquareFinder</a></p>
+<p><a href="https://tio.run/##LcxNCoMwEEDhvaeQgcAMJCBdOhQv4kYSI7NoIv4hhJw9DbVv/fGsWawtxaNQWs9jR1jwpgTEPm4o747XTcLhEW6jzqH/mRHUPlYCWrQYo14DzNccoIfoHJAWJn5muapc6qD9TBLwiuIoNe0/j8RNLl8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, <s> 111 </s> 110 bytes</h1>
 <pre class="lang-nim prettyprint-override"><code>echo&quot;proc(n:int)=echo(case n&quot;
 for i in 0..&lt;2 shl 32:echo &quot;of &quot;,i,&quot;:&quot;,repr [&quot;even&quot;,&quot;odd&quot;][i%%2]
 echo&quot;else: $0)&quot;
@@ -63,7 +71,7 @@ of 4294967295:&quot;odd&quot;
 else: $0)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>Uiua, 42 bytes</h1>
+<div id="pu2" class="pu"><h1>Uiua, 42 bytes</h1>
 <pre><code>&amp;p@)⍥(&amp;p$ |&quot;odd&quot;|&quot;even&quot;
 )ⁿ31 2&amp;p$ ⨬(&quot;even&quot;
 </code></pre>
@@ -80,7 +88,7 @@ else: $0)
 </code></pre>
 <p><a href="https://uiua.org/docs/switch" rel="nofollow noreferrer"><code>⨬ - switch</code></a>, when given N, runs the code in its Nth branch.</p>
 </div>
-<div id="pu2" class="pu"><h1>vim, 80 bytes</h1>
+<div id="pu3" class="pu"><h1>vim, 80 bytes</h1>
 <pre><code>a&quot;ncw
 1 odd
 2 even&lt;ESC&gt;oVkyPjj2&lt;C-V&gt;&lt;C-A&gt;j2&lt;C-V&gt;&lt;C-A&gt;&lt;ESC&gt;0&quot;aDdd2147483647@ao&lt;C-V&gt;&lt;ESC&gt;&quot;npi:v/^&lt;C-V&gt;&lt;ESC&gt;A /d&lt;C-V&gt;&lt;ESC&gt;0D@&quot;
@@ -126,14 +134,6 @@ dw
 <p>The footer then retrieves register n and appends a line that, when executed, will scan through all segments and delete the ones that don't match n. It then pulls the command into a register and executes it, and then finally deletes the numeric part of the remaining line.</p>
 <p><a href="https://tio.run/##K/v/P1EpL7mcy1AhPyWFy0ghtSw1Tzo/LLsyICvLSIwRhKUNlBJdUlIMTRwS88WklfIKMq3K9OPEpB0V9FPEpA1cHJS4Usqluf7/BwA" rel="nofollow noreferrer" title="V (vim) – Try It Online">Try it online (with just the first 30 segments)</a></p>
 <p>For some reason, TIO doesn't want to execute the macro at the end of the generated code, so you'll have to run that one in vim. Save the output from the first TIO as a.vim, then open a file with a single number in it, and run <code>so! a.vim</code>.</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 93 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>f(i){puts(&quot;g(x){&quot;);for(i=0;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i--%2?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
-</code></pre>
-<p>Outputs &quot;segments&quot; in reverse order.</p>
-<p>-11 thanks to <a href="https://codegolf.stackexchange.com/users/11259/digital-trauma">Digital Trauma</a> and <a href="https://codegolf.stackexchange.com/users/119678/squarefinder">SquareFinder</a>
-<a href="https://tio.run/##LcxNCoMwEEDhvaeQgcAMJCBdOhQv4kYSI7NoIv4hhJw9DbVv/fGsWawtxaNQWs9jR1jwpgTEPm4o747XTcLhEW6jzqH/mRHUPlYCWrQYo14DzNccoIfoHJAWJn5muapc6qD9TBLwiuIoNe0/j8RNLl8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> <s>137</s> 136 bytes</h1>
 
