--- a/q/105998.html
+++ b/q/105998.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>164</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
+<tr d-ix="0"><td>151</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
 <tr d-ix="1"><td>052</td><td>Vyxal 3 j</td><td>240925T134958Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275775#275775">pacman25</a></td></tr>
 <tr d-ix="2"><td>158</td><td>JavaScript Node.js</td><td>170107T170956Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106004#106004">Arnauld</a></td></tr>
 <tr d-ix="3"><td>059</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
@@ -65,11 +65,12 @@
 <tr d-ix="36"><td>172</td><td>Befunge</td><td>170107T205422Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106028#106028">James Ho</a></td></tr>
 <tr d-ix="37"><td>179</td><td>C</td><td>170107T171910Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106005#106005">simon</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 164 bytes</h1>
-<pre class="lang-sh prettyprint-override"><code>t=&quot;Dec  Chr   | &quot;;&lt;&lt;&lt;$t$t$t[1,8];jot -s-- -b- 12;c=(Space {!..~} DEL)
-for n ({32..63})for i (0 32 64){k=$[n+i];z='| ';((i&gt;32))&amp;&amp;z=\\n;printf %-5s%-6s$z $k $c[k-31]}
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 151 bytes</h1>
+<pre class="lang-sh prettyprint-override"><code>t='Dec  Chr   | ';&lt;&lt;&lt;$t$t$t[1,8];jot -s-- -b- 12;c=(Space {!..~} DEL)
+for n ({0..31})(for i (32 64 96)printf '%-5s%-6s| ' $[n+i] $c[n+i-31])|cut -c -34
 </code></pre>
-<p><a href="https://tio.run/##Fce7DoIwAAXQ3a@4kgJttI1QJSalLuLm5ggMSiAgCRDoxMNfx5AznXEo19VoK8oz4F72AGZYKgxDYjaxd7ym6tsa8IFz8A@H56tM01f3znJMeyF@C6LHk@2KtkcDOklfiEAubHsFeoL0EZzZVGsSN4cqVaN2Z7iK0uomfcYcZ9RJ0qiurxpTwOaXwebBQEaQGiSLay69dFnXPw" rel="nofollow noreferrer">Try it online!</a>
+<p><a href="https://tio.run/##FY2xDoIwGAZ3n@IzgdBG/8ZaJBpgEjc3R8KgDQQcgNC6CPjqFXLD5ab7mto5mwZZqYFrPQCYEMRJknh2JZf7cxG/OwsyRKAXQR5jnbJH/9Qlxq0QvxnZ7c43VTegBRsPQig5c7Z2A6aOiEJcIt4PTWsrBD6djE@RWT7w8nbXFPD0alKy4JP@LC8NUqFzfw" rel="nofollow noreferrer">Try it online!</a>
+<sub><s><a href="https://tio.run/##Fce7DoIwAAXQ3a@4kgJttI1QJSalLuLm5ggMSiAgCRDoxMNfx5AznXEo19VoK8oz4F72AGZYKgxDYjaxd7ym6tsa8IFz8A@H56tM01f3znJMeyF@C6LHk@2KtkcDOklfiEAubHsFeoL0EZzZVGsSN4cqVaN2Z7iK0uomfcYcZ9RJ0qiurxpTwOaXwebBQEaQGiSLay69dFnXPw" rel="nofollow noreferrer">164b</a></s></sub>
 <sub><s><a href="https://tio.run/##HclBC4IwAIbhe7/iS6Zt1CSdSTHXJbt166hCNQpNmKE7mfbXjeI9Pbx9V06TVU5618ChbAEMcGSSJMT@yoLVtpDPxoJ3nIPfOIJQakXPr6u@4/I/GrsIc@SfC9Ljic0eTQsD@hah78diZD9XoGuIEHHE3rUimVlWhezVYsBCUlrtRciY5/Uqz418tZWxD7h807k87kgPUoPorOYiKMZp@gI" rel="nofollow noreferrer">174b</a></s></sub>
 <sub><s><a href="https://tio.run/##FYy7DoIwAEV3vuIGC7bRGimKJqUu6ubmiAzYQEASIJSJx7cj5EwnOff2Jp/nTtmPVAP3vAUwwpZhGJJuJfL211j@6g7ccA7@5fCEldUtKtDBF4dD4E9s9QL0CF8gOLGhVCSqdkUMrchAN6ycLJ2YFKTEsmFavZtEp1J64rLI4/mSk@zVdsRWUlrcloS5bq8@n0o2bVF1GWyHn43DA0N6e70heprnPw" rel="nofollow noreferrer">182b</a></s></sub>
 <sub><s><a href="https://tio.run/##PYuxDoIwAER3v@KChbbRGmmRmJSyqJubIzpoIwFJ0FAmkW9HiIm5W@693NsVw9Aab3@3wK5oAHzg6SRJSDslC5fbi348W4gbBIQDpVDRLH82qME6JVerWPV82iXYGkoijnhXGZLVi/KirSEdm/Oq14xViVKcB4E1p9fV3mcjSUMZ/9D@cNS5ob7YOF/E7gM6PspUyUn/xcada6pfTVm3OcjYCsT2w/AF" rel="nofollow noreferrer">193b</a></s></sub>
