--- a/q/275779.html
+++ b/q/275779.html
@@ -26,13 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>014</td><td>05AB1E</td><td>240926T074513Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275788#275788">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>065</td><td>R</td><td>240926T063046Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275785#275785">pajonk</a></td></tr>
+<tr d-ix="0"><td>063</td><td>R</td><td>240926T063046Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275785#275785">pajonk</a></td></tr>
+<tr d-ix="1"><td>014</td><td>05AB1E</td><td>240926T074513Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275788#275788">Kevin Cr</a></td></tr>
 <tr d-ix="2"><td>083</td><td>JavaScript V8</td><td>240926T024815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275784#275784">l4m2</a></td></tr>
 <tr d-ix="3"><td>132</td><td>Python3</td><td>240925T213810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275781#275781">Ajax1234</a></td></tr>
 <tr d-ix="4"><td>021</td><td>Charcoal</td><td>240925T211658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275780#275780">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 14 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>65</s> 63 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(d,e){while(any(d%%T&gt;=F,e%%T&lt;F)){h=F&gt;T;F=1+F*!h;T=T+h};c(T,F)}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=VY49CsJAEIV7TzEiwq6ZJO4mMYa4sdtWkC1tJD9EEAtRRCQnsYmCnRfyNk5iUKyGmfe99-Z629f3Qj2Oh8KevuYrlmHOL6dys83Zendm2XBoEqUxpznTnF9KpRMTayUsPeqXsVHGKqs4ZQY1r7qYZ8FSNkbwEHyEKYIQHCFlAcKEFsn5AOwEaJW9DpUktUyIEHW6IBYWS6CT5_pu4DqO0_KUKyj4GxqRf_ILDRoT6WELN_XUKv2WJut_Q_j5ua4_8w0" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Outputs <code>m+n</code>, <code>m</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 14 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ZLãʒO%yн@εNQ}ß
 </code></pre>
 <p>Input as a pair of lists <span class="math-container">\$[d,e]\$</span>.<br />
@@ -47,19 +53,13 @@ Outputs all valid <span class="math-container">\$[m,n]\$</span>-pairs within the
     O          #  Sum the current pair: m+n
      %         #  Modulo all inner values of the (implicit) input by this (m+n)
       yн       #  Push the first item of the current pair
-        @      #  i%(m+n) &gt;= m check on each inner value
+        @      #  &gt;= check on each inner value: i%(m+n) &gt;= m
          εNQ}ß #  Check if the first list only contains 0s, and second list 1s:
          ε     #   Map over this pair of checks:
           NQ   #    Check for each check whether it equals the 0-based max-index
          }ß    #   After the map: push the flattened minimum to check all are 1
                # (after which the list of valid pairs is output implicitly)
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 65 bytes</h1>
-<pre class="lang-r prettyprint-override"><code>\(d,e){while(any(d%%T&gt;=F,e%%T&lt;F))if((F=F+1)&gt;T){F=0;T=T+1};c(T,F)}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=VY69CsJQDIV3nyIghQRj6639RW_B5a6C3NFF-oOCOIgiIj6JSxXcfCHfxliL4hSS851zcrlu61ul7_td1U-ekzkWXNLpsFytS1xsjlg4js204VLm2BCtKkSjTU9RZulk9GBkte2p8yhHy4bObdCjwhwHDEOGgCFhUIoYcgwZIll8oi70M5DV77SoL1LDxAxpqythYToDOQ29wAs913UbXnKVBH9DU_FHv9DwbRI9buB3vbT6QUOL9b8h_vxc15_5Ag" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Outputs <code>m+n</code>, <code>m</code>.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 83 bytes</h1>
 
