--- a/q/275739.html
+++ b/q/275739.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>093</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
-<tr d-ix="1"><td>110</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
-<tr d-ix="2"><td>042</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
-<tr d-ix="3"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
-<tr d-ix="4"><td>136</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
-<tr d-ix="5"><td>022</td><td>MathGolf</td><td>240925T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275772#275772">Kevin Cr</a></td></tr>
-<tr d-ix="6"><td>143</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
+<tr d-ix="0"><td>095</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
+<tr d-ix="1"><td>093</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
+<tr d-ix="2"><td>110</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
+<tr d-ix="3"><td>042</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
+<tr d-ix="4"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
+<tr d-ix="5"><td>136</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
+<tr d-ix="6"><td>022</td><td>MathGolf</td><td>240925T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275772#275772">Kevin Cr</a></td></tr>
 <tr d-ix="7"><td>024</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
 <tr d-ix="8"><td>058</td><td>Perl 5</td><td>240924T180047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275759#275759">Xcali</a></td></tr>
 <tr d-ix="9"><td>062</td><td>Bash</td><td>240924T170310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275756#275756">Digital </a></td></tr>
@@ -45,7 +45,36 @@
 <tr d-ix="16"><td>057</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
 <tr d-ix="17"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 93 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 95 bytes</h1>
+<pre class="lang-bash prettyprint-override"><code>${c=echo }case \$1 in
+for ((i=0;i&lt;2**32;i++));{
+$c&quot;$i)$c`((i%2))&amp;&amp;$c\odd||$c\even`;;&quot;
+}
+$c\esac
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70kKbE4Y8GCpaUlaboWN-NVqpNtU5Mz8hVqkxOLUxViVAwVMvO40vKLFDQ0Mm0NrDNtjLS0DIG0trampnU1l0qykkqmpkpyAlBa1UhTU01NJTkmPyWlpgZIp5al5iVYWytx1XKBeMWJyRBroLbBbAUA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>-20 bytes by DigitalTrauma<br />
+-48 bytes by myself, with a simple for loop</p>
+<p>header:</p>
+<pre><code>case $1 in
+</code></pre>
+<p>segments:</p>
+<pre><code>i)echo even/odd;;
+</code></pre>
+<p>footer:</p>
+<pre><code>esac
+</code></pre>
+<p>Explanation:</p>
+<p><code>${c=echo }</code> both assigns the variable <code>$c</code> to <code>echo </code> (note the trailing space), and expands said variable. after expansion, the whole script becomes</p>
+<pre class="lang-bash prettyprint-override"><code>echo 'case $1 in'
+for ((i=0;i&lt;2**32;i++));{
+echo &quot;$i)echo `((i%2 == 1))&amp;&amp;echo odd||echo even`;;&quot;
+}
+echo 'esac'
+</code></pre>
+<p>from here, the rest should be easy enough to follow, once you know that in bash, code in backticks is executed, then the backticks and their contained code are replaced by the standard output of that execution</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 93 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(i){puts(&quot;g(x){&quot;);for(i=0;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i--%2?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
 </code></pre>
@@ -53,7 +82,7 @@
 <p>-11 thanks to <a href="https://codegolf.stackexchange.com/users/11259/digital-trauma">Digital Trauma</a> and <a href="https://codegolf.stackexchange.com/users/119678/squarefinder">SquareFinder</a></p>
 <p><a href="https://tio.run/##LcxNCoMwEEDhvaeQgcAMJCBdOhQv4kYSI7NoIv4hhJw9DbVv/fGsWawtxaNQWs9jR1jwpgTEPm4o747XTcLhEW6jzqH/mRHUPlYCWrQYo14DzNccoIfoHJAWJn5muapc6qD9TBLwiuIoNe0/j8RNLl8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, <s> 111 </s> 110 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, <s> 111 </s> 110 bytes</h1>
 <pre class="lang-nim prettyprint-override"><code>echo&quot;proc(n:int)=echo(case n&quot;
 for i in 0..&lt;2 shl 32:echo &quot;of &quot;,i,&quot;:&quot;,repr [&quot;even&quot;,&quot;odd&quot;][i%%2]
 echo&quot;else: $0)&quot;
@@ -71,7 +100,7 @@ of 4294967295:&quot;odd&quot;
 else: $0)
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Uiua, 42 bytes</h1>
+<div id="pu3" class="pu"><h1>Uiua, 42 bytes</h1>
 <pre><code>&amp;p@)⍥(&amp;p$ |&quot;odd&quot;|&quot;even&quot;
 )ⁿ31 2&amp;p$ ⨬(&quot;even&quot;
 </code></pre>
@@ -88,7 +117,7 @@ else: $0)
 </code></pre>
 <p><a href="https://uiua.org/docs/switch" rel="nofollow noreferrer"><code>⨬ - switch</code></a>, when given N, runs the code in its Nth branch.</p>
 </div>
-<div id="pu3" class="pu"><h1>vim, 80 bytes</h1>
+<div id="pu4" class="pu"><h1>vim, 80 bytes</h1>
 <pre><code>a&quot;ncw
 1 odd
 2 even&lt;ESC&gt;oVkyPjj2&lt;C-V&gt;&lt;C-A&gt;j2&lt;C-V&gt;&lt;C-A&gt;&lt;ESC&gt;0&quot;aDdd2147483647@ao&lt;C-V&gt;&lt;ESC&gt;&quot;npi:v/^&lt;C-V&gt;&lt;ESC&gt;A /d&lt;C-V&gt;&lt;ESC&gt;0D@&quot;
@@ -135,7 +164,7 @@ dw
 <p><a href="https://tio.run/##K/v/P1EpL7mcy1AhPyWFy0ghtSw1Tzo/LLsyICvLSIwRhKUNlBJdUlIMTRwS88WklfIKMq3K9OPEpB0V9FPEpA1cHJS4Usqluf7/BwA" rel="nofollow noreferrer" title="V (vim) – Try It Online">Try it online (with just the first 30 segments)</a></p>
 <p>For some reason, TIO doesn't want to execute the macro at the end of the generated code, so you'll have to run that one in vim. Save the output from the first TIO as a.vim, then open a file with a single number in it, and run <code>so! a.vim</code>.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> <s>137</s> 136 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> <s>137</s> 136 bytes</h1>
 
 <pre class="lang-cpp prettyprint-override"><code>#import&lt;cstdio&gt;
 f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(int i;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i++&amp;1?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
@@ -147,7 +176,7 @@ f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(int i;printf(&qu
 <p>Thanks to Neil for suggesting changing <code>printf</code> to <code>puts</code>.</p>
 <p>Borrows from the <a href="https://codegolf.stackexchange.com/a/275753/119678">C (gcc) answer</a>.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 22 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 22 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>♥ór{&quot;]y=╛{♣A+╦╖8Çα§q}&quot;
 </code></pre>
 <p>(Will output nothing for undefined inputs - e.g. any negative integers; positive integers above 4294967295; or non-integer inputs.)</p>
@@ -184,28 +213,6 @@ f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(int i;printf(&qu
 <li>Trailing <code>&quot;</code>: Since we already open a <code>{</code> without closing it later on, it seems it can't handle an also open nested <code>&quot;</code> without explicitly closing it, since it otherwise <a href="https://tio.run/##AS0A0v9tYXRoZ29sZv//NcOzcnsiXXk94pWbe@KZo0Er4pWm4pWWOMOHzrHCp3F9//8" rel="nofollow noreferrer">gives an error in the <code>create_block</code> function</a>.</li>
 <li>†† With the <code>q</code>, it seems to think there is still a string on the stack when it does the <code>=</code>, even though the potential <code>&quot;even&quot;</code>/<code>&quot;odd&quot;</code> is within the if-statement block that it cannot reach during execution. Also, the <code>]y</code> would have already joined it together with the digits if that were the case anyway.. So not entirely sure why the <code>q</code> is necessary, but without it <a href="https://tio.run/##fdOhDQJBFIRhP60Qkp23t3d7AkEhCAwgIBgMIWgqWBJykgQ0LYCniG3koIE3@lfvy7zd8rBZ77ercQyL46yW4VRv9/mklkct1/y5fF/v55l@Mj9FPzV@Sn5q/dT5KfupFycrDuFBAUIhQkFCYUKBQqFCwULhYsLF1E6EiwkXEy4mXEy4mHAx4WLCJQqXKFz@fwfCENEgoUWHjB4MiMSUSOEH" rel="nofollow noreferrer">it'll give an error on all inputs in the range <code>[0,4294967294]</code> and will only succeed without errors for the max 4294967295 itself - or invalid inputs</a>.</li>
 </ul>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 143 bytes</h1>
-<pre class="lang-bash prettyprint-override"><code>c=echo
-$c case \$1 in
-paste &lt;($c &quot;`$c {1..4294967295..2}&quot;)$c odd;;
-&quot;`&quot;) &lt;($c &quot;`$c {2..4294967294..2}&quot;)$c even;;
-&quot;`&quot;)|sed 's/\t\t*/\n/g'
-$c esac
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70kKbE4Y8GCpaUlaboWN_uTbVOTM_K5VJIVkhOLUxViVAwVMvO4ChKLS1IVbDSAwkoJQKLaUE_PxMjSxNLM3MjSVE_PqFZJEyicn5Jibc2llKCkiazWCEmtCVxtallqHlRxTXFqioJ6sX5MSUyJln5Mnn66OsgBqcWJyRBnQV0HcyUA" rel="nofollow noreferrer">Attempt This Online!</a>
--20 bytes by DigitalTrauma</p>
-<p>i think brace expansion is limited to lower numbers than 4 billion, but in concept it works (tested with 13 and 12 as limits).</p>
-<p>header:</p>
-<pre><code>case $1 in
-</code></pre>
-<p>segments:</p>
-<pre><code>i)echo even/odd;;
-</code></pre>
-<p>footer:</p>
-<pre><code>esac
-</code></pre>
-<p>Bash brace expansions (which is what {x..y..step} is) are applied to their surrounding string, so <code>a{b,c}</code> returns <code>ab ac</code>. we build an array of all odds and another of all evens, then we zip them by pasting one from each array, converting tabs to newlines, and repeating until both arrays are exhausted.</p>
 </div>
 <div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>27</s> <s>26</s> 24 bytes</h1>
 <pre><code>ＦＸχχ«´¿´⁼Ｉι´θ§⪪evenodd⁴ι
