--- a/q/275790.html
+++ b/q/275790.html
@@ -26,9 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>129</td><td>Bubblegum</td><td>240926T150257Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275795#275795">Themooni</a></td></tr>
+<tr d-ix="0"><td>051</td><td>Vyxal 3 Mj</td><td>240926T164718Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275796#275796">pacman25</a></td></tr>
+<tr d-ix="1"><td>129</td><td>Bubblegum</td><td>240926T150257Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275795#275795">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/Bubblegum" rel="nofollow noreferrer">Bubblegum</a>, 129 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3/" rel="nofollow noreferrer">Vyxal 3</a> <code>-Mj</code>, 51 bytes</h1>
+<pre><code>2ƛ5+'/×]8₃Rƛ176O×]JƛL31&lt;['/p31«'/31nL-3g×+]'_8×34«p
+</code></pre>
+<p><a href="https://vyxal.github.io/latest.html#H4sIAAAAAAAAE6tWSssvyk0sUbIy0lHKSE1MSS1SslJS0lFKzk9JBbKMjs021VbXPzw91uJRU3PQsdmG5mb-QJ7Xsdk-xoY20er6BcaGh1ar6xsb5vnoGqcfnq4dqx5vcXi6scmh1QVAc9Ly80tgZqblJKYXK1lFK_kCOVlKsTpKmXkFpSUgISC7LLWoODM_D6jUWM9Ez9BAqRYACl1hnJ0AAAA" rel="nofollow noreferrer">Vyxal It Online!</a></p>
+<p>probably golfable</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/Bubblegum" rel="nofollow noreferrer">Bubblegum</a>, 129 bytes</h1>
 <p>not printable, xxd dump:</p>
 <pre><code>00000000: 5d00 0000 04ff ffff ffff ffff ff00 106e  ]..............n
 00000010: 0c5f d4dd 54e5 a78d 4c84 ac22 2022 8f09  ._..T...L..&quot; &quot;..
