--- a/q/275739.html
+++ b/q/275739.html
@@ -26,17 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>184</td><td>Sed</td><td>240926T133227Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275792#275792">Toby Spe</a></td></tr>
-<tr d-ix="1"><td>095</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
-<tr d-ix="2"><td>093</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
-<tr d-ix="3"><td>110</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
-<tr d-ix="4"><td>042</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
-<tr d-ix="5"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
-<tr d-ix="6"><td>136</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
-<tr d-ix="7"><td>022</td><td>MathGolf</td><td>240925T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275772#275772">Kevin Cr</a></td></tr>
-<tr d-ix="8"><td>024</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
-<tr d-ix="9"><td>058</td><td>Perl 5</td><td>240924T180047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275759#275759">Xcali</a></td></tr>
-<tr d-ix="10"><td>062</td><td>Bash</td><td>240924T170310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275756#275756">Digital </a></td></tr>
+<tr d-ix="0"><td>059</td><td>Bash</td><td>240924T170310Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275756#275756">Digital </a></td></tr>
+<tr d-ix="1"><td>184</td><td>Sed</td><td>240926T133227Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275792#275792">Toby Spe</a></td></tr>
+<tr d-ix="2"><td>095</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
+<tr d-ix="3"><td>093</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
+<tr d-ix="4"><td>110</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
+<tr d-ix="5"><td>042</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
+<tr d-ix="6"><td>080</td><td>vim</td><td>240924T211739Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275761#275761">Ray</a></td></tr>
+<tr d-ix="7"><td>136</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
+<tr d-ix="8"><td>022</td><td>MathGolf</td><td>240925T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275772#275772">Kevin Cr</a></td></tr>
+<tr d-ix="9"><td>024</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
+<tr d-ix="10"><td>058</td><td>Perl 5</td><td>240924T180047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275759#275759">Xcali</a></td></tr>
 <tr d-ix="11"><td>070</td><td>Python 3</td><td>240924T084616Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275743#275743">xnor</a></td></tr>
 <tr d-ix="12"><td>016</td><td>Jelly</td><td>240924T124136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275750#275750">Jonathan</a></td></tr>
 <tr d-ix="13"><td>164</td><td>Fortran GFortran</td><td>240924T094254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275746#275746">roblogic</a></td></tr>
@@ -46,7 +46,53 @@
 <tr d-ix="17"><td>057</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
 <tr d-ix="18"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Sed, 184 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 59 (Theoretical)</h1>
+<ul>
+<li>3 bytes saved thanks to @NahuelFouilleul</li>
+</ul>
+
+<pre class="lang-bash prettyprint-override"><code>printf &quot;${f=((\$1-%d))||echo} even
+$f odd
+&quot; {0..4294967295}
+</code></pre>
+<p>If bash could do the brace expansion <code>{0..4294967295}</code> <em>and</em> pass the result as command-line args to <code>printf</code> then this would work.  The result of the expansion is going to be a memory allocation at least in the 45GB range, so bash understandably barfs at this.</p>
+<p><a href="https://tio.run/##S0oszvj/v6AoM68kTUFJpTrNVkMjRsVQVzVFU7OmJjU5I79WIbUsNY9LJU0hPyWFS0mh2kBPz8TI0sTSzNzI0rT2/38A" rel="nofollow noreferrer">Try it online!</a></p>
+<p>The output looks like this:</p>
+<pre class="lang-bash prettyprint-override"><code>(($1-0))||echo even
+(($1-1))||echo odd
+(($1-2))||echo even
+(($1-3))||echo odd
+.
+.
+.
+(($1-4294967294))||echo even
+(($1-4294967295))||echo odd
+</code></pre>
+<p>As a proof-of-concept, this can be scaled down to something that works fine within the constraints of bash and TIO:</p>
+
+<pre class="lang-bash prettyprint-override"><code>printf &quot;${f=((\$1-%d))||echo} even
+$f odd
+&quot; {0..4095}
+</code></pre>
+<p><a href="https://tio.run/##S0oszvj/v6AoM68kTUFJpTrNVkMjRsVQVzVFU7OmJjU5I79WIbUsNY9LJU0hPyWFS0mh2kBPz8TA0rT2/38A" rel="nofollow noreferrer">Try it online!</a></p>
+<hr />
+<h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 76 bytes (Actual)</h1>
+
+<pre class="lang-bash prettyprint-override"><code>for((i=2**32;i--;)){ printf &quot;${f=((\$1-%d))||echo} odd
+$f even
+&quot; $i $[--i];}
+</code></pre>
+<p>This one will take several hours (days?) to run, so again TIO won't be happy with this, but it will complete eventually given enough time and disk space for the resulting script.</p>
+<p><a href="https://tio.run/##S0oszvj/Py2/SEMj09ZIS8vYyDpTV9daU7NaoaAoM68kTUFJpTrNVkMjRsVQVzVFU7OmJjU5I79WIT8lhUslTSG1LDWPS0lBJVNBJVpXNzPWuvb/fwA" rel="nofollow noreferrer">Try it online!</a></p>
+<p>Again, a scaled-down proof-of-concept for TIO.  Same as the above except <code>2**32</code> is replaced with <code>2**12</code>:</p>
+
+<pre class="lang-bash prettyprint-override"><code>for((i=2**12;i--;)){ printf &quot;${f=((\$1-%d))||echo} odd
+$f even
+&quot; $i $[--i];}
+</code></pre>
+<p><a href="https://tio.run/##BcExDoAgDADA3Vc0pCbFpIOsxJeogwqELmLQuKhvr3frcmbVVCqRDK7reueF2Vv7wFFlvxIYfNJANGHPbbD2feOWywclhAYTxDvujQEUwJFZZv@p/g" rel="nofollow noreferrer">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1>Sed, 184 bytes</h1>
 <p>I count 174 for the program and 10 bytes of input (since sed can't run without input)</p>
 <pre class="lang-sed prettyprint-override"><code>s,.*,s/&amp;/,
 :y
@@ -146,7 +192,7 @@ by
 </code></pre>
 <p><a href="https://tio.run/##Fc4xDoMwDAXQ3beoVDEglw8hJISrUGSpStQNWqWtxOnTeHq2B/@fU7w9928pmbuWMxowLSdlBgvY0HJQRi@QgDoMgl41gkEdBUa1glGdBFZ1gkn1AqfOAq8GwQz66M/1SFvXol55HcbJhw3cHDHWfERcMl85/dJe1zvXUH5rp77Wohc9zlKsCTY4b4L7Aw" rel="nofollow noreferrer" title="sed – Try It Online">Try it online.</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 95 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 95 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>${c=echo }case \$1 in
 for ((i=0;i&lt;2**32;i++));{
 $c&quot;$i)$c`((i%2))&amp;&amp;$c\odd||$c\even`;;&quot;
@@ -175,7 +221,7 @@ echo 'esac'
 </code></pre>
 <p>from here, the rest should be easy enough to follow, once you know that in bash, code in backticks is executed, then the backticks and their contained code are replaced by the standard output of that execution</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 93 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 93 bytes</h1>
 
 <pre class="lang-c prettyprint-override"><code>f(i){puts(&quot;g(x){&quot;);for(i=0;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i--%2?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
 </code></pre>
@@ -183,7 +229,7 @@ echo 'esac'
 <p>-11 thanks to <a href="https://codegolf.stackexchange.com/users/11259/digital-trauma">Digital Trauma</a> and <a href="https://codegolf.stackexchange.com/users/119678/squarefinder">SquareFinder</a></p>
 <p><a href="https://tio.run/##LcxNCoMwEEDhvaeQgcAMJCBdOhQv4kYSI7NoIv4hhJw9DbVv/fGsWawtxaNQWs9jR1jwpgTEPm4o747XTcLhEW6jzqH/mRHUPlYCWrQYo14DzNccoIfoHJAWJn5muapc6qD9TBLwiuIoNe0/j8RNLl8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, <s> 111 </s> 110 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, <s> 111 </s> 110 bytes</h1>
 <pre class="lang-nim prettyprint-override"><code>echo&quot;proc(n:int)=echo(case n&quot;
 for i in 0..&lt;2 shl 32:echo &quot;of &quot;,i,&quot;:&quot;,repr [&quot;even&quot;,&quot;odd&quot;][i%%2]
 echo&quot;else: $0)&quot;
@@ -201,7 +247,7 @@ of 4294967295:&quot;odd&quot;
 else: $0)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>Uiua, 42 bytes</h1>
+<div id="pu5" class="pu"><h1>Uiua, 42 bytes</h1>
 <pre><code>&amp;p@)⍥(&amp;p$ |&quot;odd&quot;|&quot;even&quot;
 )ⁿ31 2&amp;p$ ⨬(&quot;even&quot;
 </code></pre>
@@ -218,7 +264,7 @@ else: $0)
 </code></pre>
 <p><a href="https://uiua.org/docs/switch" rel="nofollow noreferrer"><code>⨬ - switch</code></a>, when given N, runs the code in its Nth branch.</p>
 </div>
-<div id="pu5" class="pu"><h1>vim, 80 bytes</h1>
+<div id="pu6" class="pu"><h1>vim, 80 bytes</h1>
 <pre><code>a&quot;ncw
 1 odd
 2 even&lt;ESC&gt;oVkyPjj2&lt;C-V&gt;&lt;C-A&gt;j2&lt;C-V&gt;&lt;C-A&gt;&lt;ESC&gt;0&quot;aDdd2147483647@ao&lt;C-V&gt;&lt;ESC&gt;&quot;npi:v/^&lt;C-V&gt;&lt;ESC&gt;A /d&lt;C-V&gt;&lt;ESC&gt;0D@&quot;
@@ -265,7 +311,7 @@ dw
 <p><a href="https://tio.run/##K/v/P1EpL7mcy1AhPyWFy0ghtSw1Tzo/LLsyICvLSIwRhKUNlBJdUlIMTRwS88WklfIKMq3K9OPEpB0V9FPEpA1cHJS4Usqluf7/BwA" rel="nofollow noreferrer" title="V (vim) – Try It Online">Try it online (with just the first 30 segments)</a></p>
 <p>For some reason, TIO doesn't want to execute the macro at the end of the generated code, so you'll have to run that one in vim. Save the output from the first TIO as a.vim, then open a file with a single number in it, and run <code>so! a.vim</code>.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> <s>137</s> 136 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> <s>137</s> 136 bytes</h1>
 
 <pre class="lang-cpp prettyprint-override"><code>#import&lt;cstdio&gt;
 f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(int i;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i++&amp;1?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
@@ -277,7 +323,7 @@ f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(int i;printf(&qu
 <p>Thanks to Neil for suggesting changing <code>printf</code> to <code>puts</code>.</p>
 <p>Borrows from the <a href="https://codegolf.stackexchange.com/a/275753/119678">C (gcc) answer</a>.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 22 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 22 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>♥ór{&quot;]y=╛{♣A+╦╖8Çα§q}&quot;
 </code></pre>
 <p>(Will output nothing for undefined inputs - e.g. any negative integers; positive integers above 4294967295; or non-integer inputs.)</p>
@@ -315,7 +361,7 @@ f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(int i;printf(&qu
 <li>†† With the <code>q</code>, it seems to think there is still a string on the stack when it does the <code>=</code>, even though the potential <code>&quot;even&quot;</code>/<code>&quot;odd&quot;</code> is within the if-statement block that it cannot reach during execution. Also, the <code>]y</code> would have already joined it together with the digits if that were the case anyway.. So not entirely sure why the <code>q</code> is necessary, but without it <a href="https://tio.run/##fdOhDQJBFIRhP60Qkp23t3d7AkEhCAwgIBgMIWgqWBJykgQ0LYCniG3koIE3@lfvy7zd8rBZ77ercQyL46yW4VRv9/mklkct1/y5fF/v55l@Mj9FPzV@Sn5q/dT5KfupFycrDuFBAUIhQkFCYUKBQqFCwULhYsLF1E6EiwkXEy4mXEy4mHAx4WLCJQqXKFz@fwfCENEgoUWHjB4MiMSUSOEH" rel="nofollow noreferrer">it'll give an error on all inputs in the range <code>[0,4294967294]</code> and will only succeed without errors for the max 4294967295 itself - or invalid inputs</a>.</li>
 </ul>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>27</s> <s>26</s> 24 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>27</s> <s>26</s> 24 bytes</h1>
 <pre><code>ＦＸχχ«´¿´⁼Ｉι´θ§⪪evenodd⁴ι
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6Fjfz0_KLFDQC8stTizQMDXQUjDQ1Faq5OAOKMvNKNJQO7X_UuEdJ0xom4JxYXKKRqYkQUDq3A0nascQzLyW1QiO4ICcTKJdalpqXn5KipKNgoqmjANZWu6Q4KbkYavnyaCXdshylWCgXAA" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code and only goes up to 100 (the default interpreter can't actually handle deeply nested if statements anyway). The resulting program has no header but technically has a footer for the purposes of the question. Explanation:</p>
@@ -339,58 +385,11 @@ f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(int i;printf(&qu
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=VdQ9SoNBEAbgxpPYC9n_3bOIRUwiFmLAqL3nsImg4hFSCIIHsBZLTyKokOfrZt_mYXdn5v5lcT6_WqznF9vt08312VH_Ovh8f_u-e5197Fa3q8vfOnzs1svlbxmJ0z7OxGUfV-K2jzvx2MdhYoIG1QAbdANwUA7QQTuAR_HojcUjeBSP4FE8gkfxCJ7EE3iavDd4Ek_gSTyBJ_EEnsUzeBbP_rZ4Bs_iGTyLZ_AiXsCLeAEvk14DL-IFvIgX8Cpewat4Ba_i1U4Xr-BVvII38QbexBt4E2_gbTJn4E28gXfxDt7FO3gX7-BdvDvl4h18iA_wIT7Ah_gAH-IDfEx2zB_-uDldbP7X3PPx4dH88ORh9nf8AQ" rel="nofollow noreferrer">Attempt This Online!</a> Link only goes up to 100 and includes AST for convenience. Explanation: See generator for what the individual characters mean.</p>
 </div>
-<div id="pu9" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 58 bytes</h1>
+<div id="pu10" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 58 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>say'$_=&lt;&gt;';say&quot;;\$_-$_||say &quot;,(even,odd)[$_%2]for 0..2**32
 </code></pre>
 <p><a href="https://tio.run/##K0gtyjH9/784sVJdJd7Wxk7dGshUso5RiddVia@pAXIUlHQ0UstS83TyU1I0o1XiVY1i0/KLFAz09Iy0tIyN/v//l19QkpmfV/xf19dUz8DQAAA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu10" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="noreferrer">Bash</a>, 62 (Theoretical)</h1>
-
-<pre class="lang-bash prettyprint-override"><code>f='(($1-%d))||echo'
-printf &quot;$f even
-$f odd
-&quot; {0..4294967295}
-</code></pre>
-<p>If bash could do the brace expansion <code>{0..4294967295}</code> <em>and</em> pass the result as command-line args to <code>printf</code> then this would work.  The result of the expansion is going to be a memory allocation at least in the 45GB range, so bash understandably barfs at this.</p>
-<p><a href="https://tio.run/##S0oszvj/P81WXUNDxVBXNUVTs6YmNTkjX52roCgzryRNQUklTSG1LDWPC0jnp6RwKSlUG@jpmRhZmliamRtZmtb@/w8A" rel="noreferrer">Try it online!</a></p>
-<p>The output looks like this:</p>
-<pre class="lang-bash prettyprint-override"><code>(($1-0))||echo even
-(($1-1))||echo odd
-(($1-2))||echo even
-(($1-3))||echo odd
-.
-.
-.
-(($1-4294967294))||echo even
-(($1-4294967295))||echo odd
-</code></pre>
-<p>As a proof-of-concept, this can be scaled down to something that works fine within the constraints of bash and TIO:</p>
-
-<pre class="lang-bash prettyprint-override"><code>f='(($1-%d))||echo'
-printf &quot;$f even
-$f odd
-&quot; {0..4095}
-</code></pre>
-<p><a href="https://tio.run/##S0oszvj/P81WXUNDxVBXNUVTs6YmNTkjX52roCgzryRNQUklTSG1LDWPC0jnp6RwKSlUG@jpmRhYmtb@/w8A" rel="noreferrer">Try it online!</a></p>
-<hr />
-<h1><a href="https://www.gnu.org/software/bash/" rel="noreferrer">Bash</a>, 77 bytes (Actual)</h1>
-
-<pre class="lang-bash prettyprint-override"><code>f='(($1-%d))||echo'
-for((i=2**32;i--;)){ printf &quot;$f odd
-$f even
-&quot; $i $[--i];}
-</code></pre>
-<p>This one will take several hours (days?) to run, so again TIO won't be happy with this, but it will complete eventually given enough time and disk space for the resulting script.</p>
-<p><a href="https://tio.run/##S0oszvj/P81WXUNDxVBXNUVTs6YmNTkjX50rLb9IQyPT1khLy9jIOlNX11pTs1qhoCgzryRNQUklTSE/JYULSKWWpeZxKSmoZCqoROvqZsZa1/7/DwA" rel="noreferrer">Try it online!</a></p>
-<p>Again, a scaled-down proof-of-concept for TIO.  Same as the above except <code>2**32</code> is replaced with <code>2**12</code>:</p>
-
-<pre class="lang-bash prettyprint-override"><code>f='(($1-%d))||echo'
-for((i=2**12;i--;)){ printf &quot;$f odd
-$f even
-&quot; $i $[--i];}
-</code></pre>
-<p><a href="https://tio.run/##S0oszvj/P81WXUNDxVBXNUVTs6YmNTkjX50rLb9IQyPT1khLy9DIOlNX11pTs1qhoCgzryRNQUklTSE/JYULSKWWpeZxKSmoZCqoROvqZsZa1/7/DwA" rel="noreferrer">Try it online!</a></p>
 </div>
 <div id="pu11" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="noreferrer">Python 3</a>, 70 bytes</h1>
 
