--- a/q/275630.html
+++ b/q/275630.html
@@ -26,12 +26,12 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>123</td><td>Nim</td><td>240923T090113Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275714#275714">Archar G</a></td></tr>
-<tr d-ix="1"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
-<tr d-ix="2"><td>076</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
-<tr d-ix="3"><td>nan</td><td></td><td>240922T173205Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275690#275690">A.J Serv</a></td></tr>
-<tr d-ix="4"><td>101</td><td>Python</td><td>240920T162502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275662#275662">William</a></td></tr>
-<tr d-ix="5"><td>468</td><td>Rust</td><td>240921T115311Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275669#275669">bzr</a></td></tr>
+<tr d-ix="0"><td>458</td><td>Rust</td><td>240921T115311Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275669#275669">bzr</a></td></tr>
+<tr d-ix="1"><td>123</td><td>Nim</td><td>240923T090113Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275714#275714">Archar G</a></td></tr>
+<tr d-ix="2"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
+<tr d-ix="3"><td>076</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="4"><td>nan</td><td></td><td>240922T173205Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275690#275690">A.J Serv</a></td></tr>
+<tr d-ix="5"><td>101</td><td>Python</td><td>240920T162502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275662#275662">William</a></td></tr>
 <tr d-ix="6"><td>424</td><td>TurboWarp</td><td>240921T121932Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275671#275671">SectorCo</a></td></tr>
 <tr d-ix="7"><td>080</td><td>R + cli</td><td>240921T104256Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275668#275668">Dominic </a></td></tr>
 <tr d-ix="8"><td>212</td><td>Java 21</td><td>240921T115556Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275670#275670">Juuz</a></td></tr>
@@ -40,9 +40,47 @@
 <tr d-ix="11"><td>086</td><td>C MSVC</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
 <tr d-ix="12"><td>087</td><td>Zsh</td><td>240919T132850Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275639#275639">GammaFun</a></td></tr>
 <tr d-ix="13"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
-<tr d-ix="14"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, 123 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>484</s> <s>468</s> 458 bytes</h1>
+<pre class="lang-rust prettyprint-override"><code>use std::io::{stdin,stdout,Write};use termion::{clear,cursor::Left,event::Key::{Backspace,Char,Esc},input::TermRead,raw::IntoRawMode};fn main(){let(mut o,mut s)=(stdout().into_raw_mode().unwrap(),format!(&quot;&quot;));for c in stdin().keys(){match c.unwrap(){Esc=&gt;break,Char(k)=&gt;{if k.is_digit(10){write!(o,&quot;*&quot;).unwrap();s.push(k)}}Backspace=&gt;{write!(o,&quot;{}{}&quot;,Left(1),clear::AfterCursor).unwrap();s=s[..s.len()-1].into()}_=&gt;()}o.flush().unwrap();if s.len()&gt;3{break}}}
+</code></pre>
+<p>This solution uses <a href="https://crates.io/crates/termion" rel="nofollow noreferrer">Termion</a>, and so doesn't support Windows.</p>
+<p>I'm new to terminal manipulation so this probably isn't the most concise way to do this.</p>
+<p>Ungolfed:</p>
+<pre class="lang-rust prettyprint-override"><code>use std::io::{stdin, stdout, Write};
+use termion::{
+    clear,
+    cursor::Left,
+    event::Key::{Backspace, Char, Esc},
+    input::TermRead,
+    raw::IntoRawMode,
+};
+fn main() {
+    let (mut o, mut s) = (stdout().into_raw_mode().unwrap(), format!(&quot;&quot;));
+    for c in stdin().keys() {
+        match c.unwrap() {
+            Esc =&gt; break,
+            Char(k) =&gt; {
+                if k.is_digit(10) {
+                    write!(o, &quot;*&quot;).unwrap();
+                    s.push(k)
+                }
+            }
+            Backspace =&gt; {
+                write!(o, &quot;{}{}&quot;, Left(1), clear::AfterCursor).unwrap();
+                s = s[..s.len() - 1].into()
+            }
+            _ =&gt; (),
+        }
+        o.flush().unwrap();
+        if s.len() &gt; 3 {
+            break;
+        }
+    }
+}
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nim-lang.org" rel="nofollow noreferrer">Nim</a>, 123 bytes</h1>
 <p>Includes non-printable chars:</p>
 <pre class="lang-nim prettyprint-override"><code>import terminal;let w=writeStyled
 var n=0;while n&lt;4:n+=(case getch()
@@ -58,7 +96,7 @@ of'\x7F':(w &quot;\e[D\e[J&quot;;-int n&gt;0)
 else:0)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
+<div id="pu2" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
 <p>Not placing on left-to corner saves: <a href="https://i.sstatic.net/GsmDekFQ.png" rel="nofollow noreferrer">https://i.sstatic.net/GsmDekFQ.png</a></p>
 <pre><code>    org 100h
     mov bx, 0AE00h
@@ -96,7 +134,7 @@ bksp:
 </p>
 <p>From Kevin Cruijssen's solution, doesn't handle Shift well</p>
 </div>
-<div id="pu2" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> <s>94</s> <s>84</s> <s>80</s> <s>77</s> 76 bytes</h1>
+<div id="pu3" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> <s>94</s> <s>84</s> <s>80</s> <s>77</s> 76 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=c=event.key;return!(value[3]||c[5]!='p'&amp;!++c)</code></pre>
@@ -126,7 +164,7 @@ bksp:
 <li>'preparation characters' (aka <code>'&quot;`~^</code>) still seem to work unfortunately (even beyond four characters)..</li>
 </ul>
 </div>
-<div id="pu3" class="pu"><p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div id="pu4" class="pu"><p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=e=event;return!(value[3]||!++e.key&amp;e.which!=8)
 https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634</code></pre>
@@ -134,7 +172,7 @@ https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identificat
 </div>
 </p>
 </div>
-<div id="pu4" class="pu"><h1>Python, 101 bytes</h1>
+<div id="pu5" class="pu"><h1>Python, 101 bytes</h1>
 <pre><code>import sys;s=0
 while s&lt;4:
  c=sys.stdin.read(1)
@@ -151,45 +189,6 @@ while s&lt;4:
  print(&quot;*&quot;*s+' ',end='\r')
 </code></pre>
 <p>This second version uses <code>msvcrt</code>, which is only available on Windows, but it does not require raw input mode.</p>
-</div>
-<div id="pu5" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>484</s> 468 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>use std::io::{stdin,stdout,Write};use termion::{clear,cursor::Left,event::Key::{Backspace,Char,Esc},input::TermRead,raw::IntoRawMode};fn main(){let(mut o,mut s)=(stdout().into_raw_mode().unwrap(),format!(&quot;&quot;));for c in stdin().keys(){match c.unwrap(){Esc=&gt;break,Char(k)=&gt;{if &quot;0123456789&quot;.contains(k){write!(o,&quot;*&quot;).unwrap();s.push(k)}}Backspace=&gt;{write!(o,&quot;{}{}&quot;,Left(1),clear::AfterCursor).unwrap();s=s[..s.len()-1].into()}_=&gt;()}o.flush().unwrap();if s.len()&gt;3{break}}}
-</code></pre>
-<p>This solution uses <a href="https://crates.io/crates/termion" rel="nofollow noreferrer">Termion</a>, and so doesn't support Windows.</p>
-<p>I'm new to terminal manipulation so this probably isn't the most concise way to do this.</p>
-<p>Ungolfed:</p>
-<pre class="lang-rust prettyprint-override"><code>use std::io::{stdin, stdout, Write};
-use termion::{
-    clear,
-    cursor::Left,
-    event::Key::{Backspace, Char, Esc},
-    input::TermRead,
-    raw::IntoRawMode,
-};
-fn main() {
-    let (mut o, mut s) = (stdout().into_raw_mode().unwrap(), format!(&quot;&quot;));
-    for c in stdin().keys() {
-        match c.unwrap() {
-            Esc =&gt; break,
-            Char(k) =&gt; {
-                if &quot;0123456789&quot;.contains(k) {
-                    write!(o, &quot;*&quot;).unwrap();
-                    s.push(k)
-                }
-            }
-            Backspace =&gt; {
-                write!(o, &quot;{}{}&quot;, Left(1), clear::AfterCursor).unwrap();
-                s = s[..s.len() - 1].into()
-            }
-            _ =&gt; (),
-        }
-        o.flush().unwrap();
-        if s.len() &gt; 3 {
-            break;
-        }
-    }
-}
-</code></pre>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://turbowarp.org" rel="nofollow noreferrer">TurboWarp</a>, 424 bytes</h1>
 <p><a href="https://turbowarp.org/1070983410" rel="nofollow noreferrer">Try it here.</a></p>
@@ -234,7 +233,7 @@ wait until&lt;not&lt;key(any v)pressed?
 <div id="pu8" class="pu"><h1>Java 21, 212 bytes</h1>
 <p>A graphical solution with AWT. The output is displayed in the window title.
 At least on Windows 10, you need to resize the window so you can see the title, or look at the taskbar etc.</p>
-<p><a href="https://i.sstatic.net/mLVal3HD.gif" rel="nofollow noreferrer"><img src="https://i.sstatic.net/mLVal3HD.gif" alt="demo of the window with an on-screen keyboard" /></a></p>
+<p><a href="https://i.sstatic.net/mLVal3HD.gif" rel="noreferrer"><img src="https://i.sstatic.net/mLVal3HD.gif" alt="demo of the window with an on-screen keyboard" /></a></p>
 <pre class="lang-java prettyprint-override"><code>new java.awt.Frame(){{addKeyListener(new java.awt.event.KeyAdapter(){int j,c;public void keyTyped(java.awt.event.KeyEvent e){c=e.getKeyChar();setTitle(&quot;*&quot;.repeat(j+=j&gt;3?0:47&lt;c&amp;&amp;c&lt;58?1:j&gt;0&amp;&amp;c&lt;9?-1:0));}});}}::show
 </code></pre>
 <p>The code is a <code>Runnable</code> (or similar) method reference.</p>
@@ -387,11 +386,6 @@ N GOTO VAL &quot;4&quot;
 </code></pre>
 <p>Repeat until <code>4</code> digits have been input. (<code>PI</code> is doing a lot of heavy lifting in this program!)</p>
 <p>This program could also be adapted to run on the ZX81 but you would need to split line <code>4</code> up into two lines as the ZX81 only accepts one statement per line except in <code>IF...THEN</code> statements. This would increase the byte count by <code>4</code>.</p>
-</div>
-<div id="pu14" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 125 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>fn f(x:&amp;str){let x=x.chars().filter(|y|y.is_digit(10)).collect::&lt;Vec&lt;_&gt;&gt;();for i in 0..std::cmp::min(x.len(),4){dbg!(x[i]);}}
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=LY5BCoJAFECvMm1iPtRg0CJG8xhtIsTGGfswasx8YUQ9SRuDWnWibpNgqwdv897j5VpP08fUrMqx5sD6d0tme_iOszI8yLUnB73VxMIxCHXLnecgDFrSjg_d0An0WYElEt9FAEI11mpFUiYnrZIsTTnEpnEMGdYsEsJTIaWq7lJWcy8Iq-fqZg99cS1XPJzxAvE4LhPPP6dp4Q8" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 
 <table id="st">
