--- a/q/275790.html
+++ b/q/275790.html
@@ -26,17 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>042</td><td>Jelly</td><td>240926T203448Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275799#275799">Jonathan</a></td></tr>
+<tr d-ix="0"><td>039</td><td>Jelly</td><td>240926T203448Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275799#275799">Jonathan</a></td></tr>
 <tr d-ix="1"><td>086</td><td>JavaScript ES6</td><td>240926T204618Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275800#275800">Arnauld</a></td></tr>
 <tr d-ix="2"><td>030</td><td>Charcoal</td><td>240926T212522Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275802#275802">Neil</a></td></tr>
 <tr d-ix="3"><td>051</td><td>Vyxal 3 Mj</td><td>240926T164718Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275796#275796">pacman25</a></td></tr>
 <tr d-ix="4"><td>129</td><td>Bubblegum</td><td>240926T150257Z</td><td><a href="https://codegolf.stackexchange.com/questions/275790/five-hundred-cigarettes/275795#275795">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 43 </s> 42 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>25ðṬṖ;“@ɦ(½¤‘b4UŻ€31Ð¡»/Ż€Ṗ€ḊƊƬḣ»/ị“_/° ”Y
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 43 42 </s> 39 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>25ðṬṖ;“@ɦ(½¤‘b4UŻ€31Ð¡Ḋ€Ḋ$ƬḣẎ»/ị“_/° ”Y
 </code></pre>
 <p>A full program that takes no arguments and prints the pile to stdout.</p>
-<p><strong><a href="https://tio.run/##y0rNyan8/9/I9PCGhzvXPNw5zfpRwxyHk8s0Du09tORRw4wkk9Cjux81rTE2PDzh0MJDu/XBPKA6ELmj61jXMSC1GCj@cHc3UGe8/qENCo8a5kb@/w8A" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<p><strong><a href="https://tio.run/##y0rNyan8/9/I9PCGhzvXPNw5zfpRwxyHk8s0Du09tORRw4wkk9Cjux81rTE2PDzh0MKHO7qAbCCpcgxILn64q@/Qbv2Hu7uBeuL1D21QeNQwN/L/fwA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
 <h4>How?</h4>
 <p>Makes a single cigarette using integers rather than characters in printing precedence order so that we can merge canvases of cigarettes and other spaces (zeros) by taking maximums:</p>
 <pre><code>   _  0001
@@ -46,6 +46,7 @@
 °     3
 </code></pre>
 <p>Then builds the pile, translates to characters, and prints.</p>
+<p><em>outdated...</em></p>
 <pre><code>25ðṬṖ;“@ɦ(½¤‘b4UŻ€31Ð¡»/Ż€Ṗ€ḊƊƬḣ»/ị“_/° ”Y - Main Link: no arguments
 25                                         - set the left argument to 25
   ð                                        - start a new dyadic chain - f(L=25, R=25)
